# toll-optimizer

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  SKILL.md  docker-compose.yml  docs-agent.md  env.txt  test-agent.md
.gemini/: gemini.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: style_and_conventions.md  suggested_commands.md  task_completion.md
crates/api/: Cargo.toml  test_tower_gov.rs
crates/api/migrations/: 20260126000000_init_schema.sql  20260403143000_fix_database_issues.sql
crates/api/src/: main.rs  models.rs
crates/api/src/auth/: extractor.rs  mod.rs
crates/api/src/db/: mod.rs  summary.rs  user.rs
crates/api/src/handlers/: analyze.rs  auth.rs  mod.rs  pricing.rs
crates/api/tests/: api_integration.rs  csv_processing_test.rs  pricing_integration.rs  security_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_smoke_test.rs  pricing_logic_test.rs
crates/core/: Cargo.toml
crates/core/src/: constants.rs  csv_parser.rs  lib.rs  trip_analyzer.rs
crates/core/tests/: analyzer_tests.rs  parser_tests.rs  unit_tests.rs
docs/: api_reference.md  architecture_and_analysis.md  auth.md  claude_arch_analysis.md  cli-only.md  cli_user_guide.md  current_cli_architecture.md  legal_analysis.md  monitoring.md  web_app_architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  store.ts
frontend/src/components/: AuthGuard.tsx  Footer.tsx  Navbar.tsx  UploadDropzone.tsx
frontend/src/lib/: api.ts
monitoring/alertmanager/: alertmanager.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
prometheus/: prometheus.yml
src/: constants.rs  csv_parser.rs  heavy_multiple_unit.rs  heavy_single_unit.rs  holidays.json  lib.rs  light_vehicles.rs  main.rs  md_output.rs  motorcycles.rs  trip_analyzer.rs
src/vehicle_class/: heavy_multiple_unit.rs  heavy_single_unit.rs  light_vehicles.rs  medium_vehicles.rs  mod.rs  motorcycles.rs
tests/: analyzer_tests.rs  cli_smoke_test.rs  e2e_tests.rs  parser_tests.rs  pricing_logic_test.rs  unit_tests.rs  vehicle_class_tests.rs
tests/csv/: 2025-08-28 - camera charges.csv  2025-08-28 - light vehicles.csv  2026-02-28 - invalid entry.csv  2026-02-28 - no preamble.csv  2026-04-28 - mixed case.csv
(+12 files in other folders)
