[package]
name = "toll-optimizer"
version = "0.1.0"
edition = "2024"
authors = ["Anders Rawlins <anders@example.com>"]
description = "A high-performance Rust-based system to analyze and optimize 407 ETR statements."

[dependencies]
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
simple-datetime-rs = "0.2.3"

[dev-dependencies]
tempfile = "3.10"
