[package]
name = "toll-optimizer-api"
version = "0.1.0"
edition = "2024"

[dependencies]
toll-optimizer-core = { path = "../core" }
axum = { version = "0.7", features = ["multipart"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "rust_decimal"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors", "auth", "fs"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
dotenvy = "0.15"
rust_decimal = { version = "1.33", features = ["serde", "db-postgres"] }
axum-prometheus = "0.6"

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
